--- a/expense-tracker/src/components/Filter/ExpenseFilter.css
+++ b/expense-tracker/src/components/Filter/ExpenseFilter.css
@@ -18,7 +18,8 @@
 
 .expenses-filter select {
     font: inherit;
-    padding: 0.5rem 3rem;
+    padding: 0.5rem 2rem;
     font-weight: bold;
     border-radius: 6px;
+    text-align: center;
 }
