Not done yet, but I love this version of the Chart, which they're chubby and pretty cute =))

--- a/expense-tracker/src/components/Footer/Footer.css
+++ b/expense-tracker/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
-p {
+.footer {
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
+    margin: 20px;
 }
