--- a/expense-tracker/src/components/ChartBar/ChartBar.css
+++ b/expense-tracker/src/components/ChartBar/ChartBar.css
@@ -20,7 +20,7 @@
 .chart-bar__fill {
     background-color: #4826b9;
     width: 100%;
-    transition: all 0.3s ease-out;
+    transition: all 0.5s ease-in-out;
 }
 
 .chart-bar__label {
