CSS modules completed

--- a/goals-digger/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/goals-digger/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -27,7 +27,7 @@
   color: red;
 }
 
-.form-control.form-control.invalid input {
+.form-control.invalid input {
   background-color: salmon;
   border: red;
 }
