--- a/sec10_sideEffect/src/components/UI/Input/Input.module.css
+++ b/sec10_sideEffect/src/components/UI/Input/Input.module.css
@@ -1,10 +1,3 @@
-.login {
-  width: 90%;
-  max-width: 40rem;
-  margin: 2rem auto;
-  padding: 2rem;
-}
-/* 
 .control {
   margin: 1rem 0;
   display: flex;
@@ -41,16 +34,11 @@
 .control.invalid input {
   border-color: red;
   background: #fbdada;
-} */
-
-.actions {
-  text-align: center;
 }
 
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
   .control {
     align-items: center;
     flex-direction: row;
   }
-
-} */
+}
