135. added Meals component

--- a/11_FoodOrderApp/src/components/Layout/Header/Header.module.css
+++ b/11_FoodOrderApp/src/components/Layout/Header/Header.module.css
@@ -4,8 +4,8 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  background-color: #ad3708;
-  color: white;
+  background-color: #ede0da;
+  color: rgb(45, 40, 40);
   display: flex;
   justify-content: space-between;
   align-items: center;
